# CSSE332-Materials-Fork

./: .gitignore  LICENSE  README.md
Homework01/: CMakeLists.txt
Homework01/include/: mem.h
Homework01/src/: CMakeLists.txt  mem.c
Homework01/tests/: CMakeLists.txt  mem_debug.c  mem_tests.c
Homework02/include/: proc_read.h
Homework02/src/: proc_read.c
Lab01/: CMakeLists.txt
Lab01/include/: db.h  fib.h  hello.h  ilist.h  vector.h
Lab01/src/: CMakeLists.txt  db.c  fib.c  hello.c  ilist.c  vector.c
Lab01/tests/: CMakeLists.txt  array_tests.c  db_debug.c  db_tests.c  fib_debug.c  fib_tests.c  hello_tests.c  ilist_debug.c  ilist_tests.c  vector_debug.c  vector_tests.c
Lab02/: dataout.txt  timedata.txt
Lab02/src/: freading.c  reading.c
Lab03/: CMakeLists.txt
Lab03/include/: rhmalloc.h
Lab03/src/: CMakeLists.txt  rhmalloc.c
Lab03/tests/: CMakeLists.txt  rhmalloc_debug.c  rhmalloc_tests.c
Lab04/: Lab04.c  ex3  ex3.c  mkbuild.sh
Lab04/src/: rf_load.c
Lab04/tests/: rf_parse_debug.c
Lab05/src/: shell.c
Lab05/tests/: shell_debug.c
Lab06/: CMakeLists.txt
Lab06/src/: CMakeLists.txt  barrier.c  factoring.c  inorder.c  max.c  sorting.c  thread_abc.c
Lab07/: CMakeLists.txt
Lab07/src/: CMakeLists.txt  priority.c  redhen.c  threejobs.c
Lecture_Demos/binaries_as_files/: 0_hello.c  1_write_text.c  2_write_binary.c  3_read_binary.c
Lecture_Demos/c_review/: arithmetic.c  casting.c  locations.c  pointers.c
Lecture_Demos/details_of_file_operations/: clientread.c  fread.c  read.c  serverwrite.c  syscall.c  test.txt
Lecture_Demos/loading_into_memory/: 01_add.c  01_load.c  02_addg.c  02_loadg.c
Lecture_Demos/pipes/: makefile  pipe_rand.c
Lecture_Demos/process_exec/: 01_wait.c  02_exec.c  03_exec.c  makefile
Lecture_Demos/process_fork/: 01_fork.c  02_fork.c  03_fork.c  04_fork.c  05_fork.c
Lecture_Demos/signals/: sigmath.c
Lecture_Demos/system_calls_and_file_io/: .gitignore  file.c  system_vs_function.c
Lecture_Demos/threads_condvar/: barrier.c  makefile  thread_ABC.c
Lecture_Demos/threads_intro/: makefile  pitfall.c  threads_example.c  threads_speed_test.c
Lecture_Demos/threads_locks/: array_sum.c  makefile
